more posts routes

--- a/views/posts/postsshow.ejs
+++ b/views/posts/postsshow.ejs
@@ -38,7 +38,7 @@
         </form>
 
 
-        <a href="/" class="btn btn-info" role="button">go back to posts</a>
+        <a href="/users/loggedInHome" class="btn btn-info" role="button">go back to posts</a>
     <%} else {%>
     <h4>Error: This post does not exist.</h4>
     <%}%>
