--- a/views/posts/postsedit.ejs
+++ b/views/posts/postsedit.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>postsedit</title>
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -36,7 +36,7 @@
 <br>
 <br>
 
-        <a href="/" class="btn btn-info" role="button">go back to posts</a>
+        <a href="/users/loggedInHome" class="btn btn-info" role="button">go back to posts</a>
     <%} else {%>
     <h4>Error: This post does not exist.</h4>
     <%}%>
