--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -37,29 +37,44 @@
 
 <br>
     <h1>here are the posts!</h1>
+
     <%if (myPostsNotAdmin) {%>
-    <% myPostsNotAdmin.forEach(function(post){%>
+    <%thisUsersPosts.forEach(function(post){ %>
+            <h3>  <%= post.title %> </h3>
+            <h4>  By: <%= post.username %> </h4>
+            <h3> <a href= "http://<%=post.content_link%>" >  <%= post.content_link %>  </a> </h3>
+            <br>
+            <form method="POST" action="/posts/<%=post.id%>?_method=DELETE" >
+                  <button type="submit">Delete post</button>
+            </form>
+            <form method="GET" action="/posts/<%=post.id%>/edit" >
+                  <button class="btn btn-info" type="submit">Edit post</button>
+            </form>
+            <hr>
+        <% }) %>
+    <% myPostsNotAdmin.forEach(function(post){ %>
         <h3>  <%= post.title %> </h3>
         <h4>  By: <%= post.username %> </h4>
         <h3 > <a href= "http://<%=post.content_link%>" >  <%= post.content_link %>  </a> </h3>
         <br>
         <hr>
 
-    <%   })  }  %>
-        <%if (myPostsAdmin) {%>
-        <% myPostsAdmin.forEach(function(post){%>
+    <%   })  }  else if (myPostsAdmin) { %>
+        <% myPostsAdmin.forEach(function(post){ %>
             <h3>  <%= post.title %> </h3>
             <h4>  By: <%= post.username %> </h4>
 
-        <form method="POST" action="/posts/<%=post.id%>?_method=DELETE" >
-          <button type="submit">Delete post</button>
-        </form>
-
             <h3 > <a href= "http://<%=post.content_link%>" >  <%= post.content_link %>  </a> </h3>
             <br>
+
+            <form method="POST" action="/posts/<%=post.id%>?_method=DELETE" >
+                  <button type="submit">Delete post</button>
+            </form>
+
+            <form method="GET" action="/posts/<%=post.id%>/edit" >
+                  <button class="btn btn-info" type="submit">Edit post</button>
+            </form>
             <hr>
-
-
             <%   })  }  %>
 
 </body>
