submits working routes for posts, comments, users

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,14 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>sign up home</title>
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
 
 
     <h1>Welcome to Reddit! </h1>
+
         <br>
         <!-- <a href="users/new" method= "GET" role="button">create your username!</a> -->
-          <a href="auth/login" method= "GET"  role="button">Already a user? sign in here.</a>
+         <h4>Already a user?  <a href="auth/login" method= "GET"  class = 'btn btn-info'role="button">Sign in here.</a></h4>
     <hr>
 
 
