--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,14 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <title>Sign Up</title>
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
 
     <%if(error){%>
         <%= error %>
         <% } %>
+        <h1>Welcome to Reddit!</h1>
 
-    <h1>Existing users: Log in to this site.</h1>
+    <h4>Existing users: Log in below.</h4>
   <form action="/auth/login" method="post">
       <label for="username">username:</label>
     <input id='username' type="text" name="username">
@@ -21,7 +25,7 @@
     <br>
     <br>
 
-    <input type="submit">
+    <input class = 'btn btn-info' type="submit">
   </form>
 </body>
 </html>
