--- a/views/posts/postsedit.ejs
+++ b/views/posts/postsedit.ejs
@@ -13,7 +13,9 @@
 
 
 
-    <h1>Reddit: Edit this post!</h1>
+    <h1>Welcome to Reddit: Edit this post!</h1>
+    <a href="/auth/logout" class = 'btn btn-info'>Log Out</a>
+
 <br>
     <%if (myPost && typeof myPost !== "undefined") {%>
 
