--- a/views/posts/postsindex.ejs
+++ b/views/posts/postsindex.ejs
@@ -13,6 +13,8 @@
 <body>
 
 <h1>Welcome to Reddit! </h1>
+<a href="/auth/logout" class = 'btn btn-info'>Log Out</a>
+
     <br>
     <a href="users/new" method= "GET" class="btn btn-info" role="button">create your username!</a>
       <a href="posts/new" method= "GET" class="btn btn-info" role="button">make a new post</a>
