--- a/views/posts/postsnew.ejs
+++ b/views/posts/postsnew.ejs
@@ -12,6 +12,8 @@
 <body>
 
 <h1>Welcome to Reddit! </h1>
+<a href="/auth/logout" class = 'btn btn-info'>Log Out</a>
+
 <h1>Make a new post! Be sure to include your link.</h1>
 <br>
 <br>
