--- a/views/home.ejs
+++ b/views/home.ejs
@@ -37,5 +37,22 @@
 
     </form>
 
+
+<hr>
+
+    <h1>here are the posts!</h1>
+
+        <%if (myPostsNotAdmin) {%>
+        <% myPostsNotAdmin.forEach(function(post){ %>
+            <h3>   <a href="/posts/<%=post.id%>"> <%= post.title %></a>    </h3>
+            <h4>  By: <%= post.username %> </h4>
+            <h3 > <a href= "http://<%=post.content_link%>" >  <%= post.content_link %>  </a> </h3>
+            <form method="GET" action="/posts/<%=post.id%>" >
+            </form>
+            <br>
+            <hr>
+
+        <%   })  }   %>
+
 </body>
 </html>
